--- a/views/joke.hbs
+++ b/views/joke.hbs
@@ -9,13 +9,14 @@
 </head>
 
 <body>
-    <div class="navbar bg-base-200">
+    <div class="navbar bg-base-100">
         <a class="btn btn-ghost normal-case text-xl">API Version : {{version}}</a>
     </div>
     <div class="hero min-h-screen bg-base-200">
         <div class="hero-content text-center">
             <div class="max-w-md">
                 <h1 class="text-5xl font-bold">{{joke.category}}</h1>
+                <div class="divider"></div>
                 <p class="py-6">{{joke.setup}}</p>
                 <p class="py-6">{{joke.delivery}}</p>
                 <p class="py-6">{{joke.joke}}</p>
